<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginStart="8dp"
    android:layout_marginVertical="12dp"
    android:layout_marginEnd="8dp"
    card_view:cardCornerRadius="16dp"
    app:cardElevation="4dp"
    app:cardMaxElevation="4dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/img_source"
            android:contentDescription="@string/image_admin"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:scaleType="centerCrop"
            tools:src="@tools:sample/avatars"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_source"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:layout_marginStart="8dp"
            android:ellipsize="end"
            android:gravity="start"
            android:maxLines="2"
            android:textSize="12sp"
            card_view:layout_constraintStart_toEndOf="@+id/img_source"
            card_view:layout_constraintTop_toTopOf="parent"
            tools:text="@string/admin_article" />

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="175dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:paddingEnd="8dp"
            android:ellipsize="end"
            android:gravity="start"
            android:maxLines="3"
            android:textSize="22sp"
            android:textStyle="bold"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toBottomOf="@+id/img_source"
            tools:text="@string/title"/>

        <TextView
            android:id="@+id/tv_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:ellipsize="end"
            android:gravity="start"
            android:maxLines="2"
            android:textSize="12sp"
            card_view:layout_constraintBottom_toBottomOf="parent"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toBottomOf="@+id/img_article"
            tools:text="@string/description"/>

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/img_article"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:scaleType="centerCrop"
            android:src="@drawable/anjing1"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintHorizontal_bias="1"
            card_view:layout_constraintStart_toEndOf="@+id/tv_title"
            card_view:layout_constraintTop_toTopOf="parent"
            tools:ignore="ContentDescription"
            app:shapeAppearanceOverlay="@style/rounded"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>